kubernetes/net-allow-node-to-redis.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-to-redis
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: node-backend # Only possible access
    ports:
    - protocol: TCP
      port: 6379
